name:                layout-rules
version:             0.1.0.0
synopsis:            A collection of different layout implementations
homepage:            https://github.com/elliottt/layout-rules
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
copyright:           Trevor Elliott, 2017
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Text.Layout.OffSides
  build-depends:       base >=4.7 && < 5,
                       alex-tools >= 0.1.1.0 && < 0.2,
                       text >= 1.2 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
